// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Navigation renders correctly - navigation bottom center 1`] = `
<div>
  <button
    className="navLink"
    id="nav-link"
    onClick={[Function]}
  >
    ☰
  </button>
  <div
    className="menu horizontalAlignCenter verticalAlignBottom"
    id="menu"
  >
    <button
      className="navClose"
      id="nav-close"
      onClick={[Function]}
    >
      ×
    </button>
    <nav>
      <ul>
        <li>
          <Link
            activeClassName="active"
            title="Title"
            to="#"
          >
            Menu Entry 1
          </Link>
        </li>
        <li>
          <Link
            activeClassName="active"
            target="Target"
            to="#"
          >
            Menu Entry 2
          </Link>
        </li>
      </ul>
    </nav>
  </div>
</div>
`;

exports[`Navigation renders correctly - navigation center center 1`] = `
<div>
  <button
    className="navLink"
    id="nav-link"
    onClick={[Function]}
  >
    ☰
  </button>
  <div
    className="menu horizontalAlignCenter verticalAlignCenter"
    id="menu"
  >
    <button
      className="navClose"
      id="nav-close"
      onClick={[Function]}
    >
      ×
    </button>
    <nav>
      <ul>
        <li>
          <Link
            activeClassName="active"
            title="Title"
            to="#"
          >
            Menu Entry 1
          </Link>
        </li>
        <li>
          <Link
            activeClassName="active"
            target="Target"
            to="#"
          >
            Menu Entry 2
          </Link>
        </li>
      </ul>
    </nav>
  </div>
</div>
`;

exports[`Navigation renders correctly - navigation center left 1`] = `
<div>
  <button
    className="navLink"
    id="nav-link"
    onClick={[Function]}
  >
    ☰
  </button>
  <div
    className="menu horizontalAlignLeft verticalAlignCenter"
    id="menu"
  >
    <button
      className="navClose"
      id="nav-close"
      onClick={[Function]}
    >
      ×
    </button>
    <nav>
      <ul>
        <li>
          <Link
            activeClassName="active"
            title="Title"
            to="#"
          >
            Menu Entry 1
          </Link>
        </li>
        <li>
          <Link
            activeClassName="active"
            target="Target"
            to="#"
          >
            Menu Entry 2
          </Link>
        </li>
      </ul>
    </nav>
  </div>
</div>
`;

exports[`Navigation renders correctly - navigation center right 1`] = `
<div>
  <button
    className="navLink"
    id="nav-link"
    onClick={[Function]}
  >
    ☰
  </button>
  <div
    className="menu horizontalAlignRight verticalAlignCenter"
    id="menu"
  >
    <button
      className="navClose"
      id="nav-close"
      onClick={[Function]}
    >
      ×
    </button>
    <nav>
      <ul>
        <li>
          <Link
            activeClassName="active"
            title="Title"
            to="#"
          >
            Menu Entry 1
          </Link>
        </li>
        <li>
          <Link
            activeClassName="active"
            target="Target"
            to="#"
          >
            Menu Entry 2
          </Link>
        </li>
      </ul>
    </nav>
  </div>
</div>
`;

exports[`Navigation renders correctly - navigation top center 1`] = `
<div>
  <button
    className="navLink"
    id="nav-link"
    onClick={[Function]}
  >
    ☰
  </button>
  <div
    className="menu horizontalAlignCenter verticalAlignTop"
    id="menu"
  >
    <button
      className="navClose"
      id="nav-close"
      onClick={[Function]}
    >
      ×
    </button>
    <nav>
      <ul>
        <li>
          <Link
            activeClassName="active"
            title="Title"
            to="#"
          >
            Menu Entry 1
          </Link>
        </li>
        <li>
          <Link
            activeClassName="active"
            target="Target"
            to="#"
          >
            Menu Entry 2
          </Link>
        </li>
      </ul>
    </nav>
  </div>
</div>
`;
